updated modal dates for classes

--- a/public/classes.html
+++ b/public/classes.html
@@ -276,6 +276,278 @@
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
+            </div>
+
+            <div class="modal fade" id="myModal3">
+              <div class="modal-dialog modal-custom">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <img src="assets/images/logo-side-2.png" alt="" id="class-modal-img">
+                  </div>
+                  <div class="modal-body">
+                    <h3>Schedule</h3>
+                    <table class="table table-striped" id="tblGrid">
+                      <thead id="tblHead">
+                        <tr>
+                          <th>Date</th>
+                          <th>Day</th>
+                          <th>Time (PDT)</th>
+                          <th>Location</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Oct 12</td>
+                          <td>Sun</td>
+                          <td>2:00 - 4:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Oct 19</td>
+                          <td>Sun</td>
+                          <td>2:00 - 4:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Oct 26</td>
+                          <td>Sun</td>
+                          <td>2:00 - 4:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 2</td>
+                          <td>Sun</td>
+                          <td>2:00 - 4:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 9</td>
+                          <td>Sun</td>
+                          <td>2:00 - 4:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 16</td>
+                          <td>Sun</td>
+                          <td>2:00 - 4:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Enroll now!</button>
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div>
+
+            <div class="modal fade" id="myModal4">
+              <div class="modal-dialog modal-custom">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <img src="assets/images/logo-side-2.png" alt="" id="class-modal-img">
+                  </div>
+                  <div class="modal-body">
+                    <h3>Schedule</h3>
+                    <table class="table table-striped" id="tblGrid">
+                      <thead id="tblHead">
+                        <tr>
+                          <th>Date</th>
+                          <th>Day</th>
+                          <th>Time (PDT)</th>
+                          <th>Location</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Oct 15</td>
+                          <td>Weds</td>
+                          <td>6:30 - 8:30pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Oct 22</td>
+                          <td>Weds</td>
+                          <td>6:30 - 8:30pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Oct 29</td>
+                          <td>Weds</td>
+                          <td>6:30 - 8:30pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 5</td>
+                          <td>Weds</td>
+                          <td>6:30 - 8:30pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 12</td>
+                          <td>Weds</td>
+                          <td>6:30 - 8:30pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 19</td>
+                          <td>Weds</td>
+                          <td>6:30 - 8:30pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Enroll now!</button>
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div>
+
+            <div class="modal fade" id="myModal5">
+              <div class="modal-dialog modal-custom">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <img src="assets/images/logo-side-2.png" alt="" id="class-modal-img">
+                  </div>
+                  <div class="modal-body">
+                    <h3>Schedule</h3>
+                    <table class="table table-striped" id="tblGrid">
+                      <thead id="tblHead">
+                        <tr>
+                          <th>Date</th>
+                          <th>Day</th>
+                          <th>Time (PDT)</th>
+                          <th>Location</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Nov 1</td>
+                          <td>Sat</td>
+                          <td>1:00 - 3:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 8</td>
+                          <td>Sat</td>
+                          <td>1:00 - 3:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 15</td>
+                          <td>Sat</td>
+                          <td>1:00 - 3:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 22</td>
+                          <td>Sat</td>
+                          <td>1:00 - 3:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 29</td>
+                          <td>Sat</td>
+                          <td>No Class</td>
+                          <td>Thanksgiving Week</td>
+                        </tr>
+                        <tr>
+                          <td>Dec 6</td>
+                          <td>Sat</td>
+                          <td>1:00 - 3:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Dec 13</td>
+                          <td>Sat</td>
+                          <td>1:00 - 3:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Enroll now!</button>
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div>
+
+            <div class="modal fade" id="myModal6">
+              <div class="modal-dialog modal-custom">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <img src="assets/images/logo-side-2.png" alt="" id="class-modal-img">
+                  </div>
+                  <div class="modal-body">
+                    <h3>Schedule</h3>
+                    <table class="table table-striped" id="tblGrid">
+                      <thead id="tblHead">
+                        <tr>
+                          <th>Date</th>
+                          <th>Day</th>
+                          <th>Time (PDT)</th>
+                          <th>Location</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Nov 4</td>
+                          <td>Tues</td>
+                          <td>6:00 - 8:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 11</td>
+                          <td>Tues</td>
+                          <td>6:00 - 8:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 18</td>
+                          <td>Tues</td>
+                          <td>6:00 - 8:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Nov 25</td>
+                          <td>Tues</td>
+                          <td>No Class</td>
+                          <td>Thanksgiving Week</td>
+                        </tr>
+                        <tr>
+                          <td>Dec 2</td>
+                          <td>Tues</td>
+                          <td>6:00 - 8:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Dec 9</td>
+                          <td>Tues</td>
+                          <td>6:00 - 8:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                        <tr>
+                          <td>Dec 16</td>
+                          <td>Tues</td>
+                          <td>6:00 - 8:00pm</td>
+                          <td>Live Online Classroom</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Enroll now!</button>
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
 
 
