updated rest of copy for classes page

--- a/public/classes.html
+++ b/public/classes.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mushroom Learning -- Coding Workshops</title>
+  <title>Mushroom Learning -- Coding Classes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Not sure if your child will be into coding? Try out one of our free workshops to get a taste for what web development has in store for them.">
+  <meta name="description" content="Our 6-week classes are hosted either on-campus or online. Learn coding through building websites using the same tools that professional engineers at Google or Facebook use.">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Muhammad Meigooni">
   <link rel="stylesheet" href="assets/styles/css/bootstrap.min.css">
@@ -57,8 +57,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3 text-center">
-          <h1>Kids Coding Workshop</h1>
-          <p class="lead">Hosted in Mushroom Learning's unique learning environment, the workshop will give students an introduction into how websites are made, and the many languages that build the framework of the internet.</p>
+          <h1>Web Development Classes</h1>
+          <p class="lead">Hosted either on-campus or online, our 6-week course teaches students how to code through building websites. They will use the same tools that professional engineers at Google and Facebook use on a day-to-day basis!</p>
         </div>
       </div>
     </div>
@@ -69,7 +69,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center h2-resize">
-          <h2>Coding Workshop Details</h2>
+          <h2>Coding Class Details</h2>
         </div>
       </div>
       <div class="row">
@@ -78,16 +78,14 @@
             <div class="plan-name">
               <h3>Pricing</h3>
             </div>
-            <div class="plan-info">
-              <p>Using Mozilla's X-Ray Goggles, students will learn how the skeleton of a website is structured. By the end of the workshop, students will understand basic HTML tags and also remix a website.</p>
-            </div>
             <div class="plan-price">
               <h2 class="tutoring-price-size">$499</h2>
             </div>
             <ul class="plan-features">
-              <li>Hosted after school and on weekends</li>
-              <li>Learn a skill after one session</li>
-              <li>Complete a project in an hour</li>
+              <li>Hosted on-campus or online</li>
+              <li>6 classes, 2 hours per class</li>
+              <li>Project based learning</li>
+              <li>Small class sizes</li>
             </ul>
             <div class="plan-cta">
               <br class="spacer-md">
@@ -97,55 +95,61 @@
         </div>
         <div class="col-md-8">
           <div class="col-md-12">
-            <table class="table table-striped" id="tblGrid">
-              <thead id="tblHead">
-                <tr>
-                  <th>Start Date</th>
-                  <th>Meets on (PDT)</th>
-                  <th>Location</th>
-                  <th class="text-right"></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="td-valign">9/24/2014</td>
-                  <td class="td-valign">Wednesdays @ 2PM</td>
-                  <td class="td-valign">Community Preparatory Academy</td>
-                  <td class="text-right"><button href="#myModal1" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
-                </tr>
-                <tr>
-                  <td class="td-valign">10/11/2014</td>
-                  <td class="td-valign">Saturdays @ 10AM</td>
-                  <td class="td-valign">Realm Academy</td>
-                  <td class="text-right"><button href="#myModal2" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
-                </tr>
-                <tr>
-                  <td class="td-valign">10/12/2014</td>
-                  <td class="td-valign">Sundays @ 2PM</td>
-                  <td class="td-valign">Live Online Class</td>
-                  <td class="text-right"><button href="#myModal3" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
-                </tr>
-                <tr>
-                  <td class="td-valign">10/15/2014</td>
-                  <td class="td-valign">Wednesdays @ 6:30PM</td>
-                  <td class="td-valign">Live Online Class</td>
-                  <td class="text-right"><button href="#myModal4" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
-                </tr>
-                <tr>
-                  <td class="td-valign">11/1/2014</td>
-                  <td class="td-valign">Saturdays @ 1PM</td>
-                  <td class="td-valign">Live Online Class</td>
-                  <td class="text-right"><button href="#myModal5" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
-                </tr>
-                <tr>
-                  <td class="td-valign">11/4/2014</td>
-                  <td class="td-valign">Tuesdays @ 6PM</td>
-                  <td class="td-valign">Live Online Class</td>
-                  <td class="text-right"><button href="#myModal6" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
-                </tr>
+            <div class="plan">
+              <div class="plan-name">
+                <h3>Classes</h3>
+              </div>
+              <table class="table table-striped text-left" id="tblGrid">
+                <thead id="tblHead">
+                  <tr>
+                    <th>Start Date</th>
+                    <th>Meets on (PDT)</th>
+                    <th>Location</th>
+                    <th class="text-right"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="td-valign">9/24/2014</td>
+                    <td class="td-valign">Wednesdays @ 2PM</td>
+                    <td class="td-valign">Community Preparatory Academy</td>
+                    <td class="text-right"><button href="#myModal1" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
+                  </tr>
+                  <tr>
+                    <td class="td-valign">10/11/2014</td>
+                    <td class="td-valign">Saturdays @ 10AM</td>
+                    <td class="td-valign">Realm Academy</td>
+                    <td class="text-right"><button href="#myModal2" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
+                  </tr>
+                  <tr>
+                    <td class="td-valign">10/12/2014</td>
+                    <td class="td-valign">Sundays @ 2PM</td>
+                    <td class="td-valign">Live Online Class</td>
+                    <td class="text-right"><button href="#myModal3" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
+                  </tr>
+                  <tr>
+                    <td class="td-valign">10/15/2014</td>
+                    <td class="td-valign">Wednesdays @ 6:30PM</td>
+                    <td class="td-valign">Live Online Class</td>
+                    <td class="text-right"><button href="#myModal4" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
+                  </tr>
+                  <tr>
+                    <td class="td-valign">11/1/2014</td>
+                    <td class="td-valign">Saturdays @ 1PM</td>
+                    <td class="td-valign">Live Online Class</td>
+                    <td class="text-right"><button href="#myModal5" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
+                  </tr>
+                  <tr>
+                    <td class="td-valign">11/4/2014</td>
+                    <td class="td-valign">Tuesdays @ 6PM</td>
+                    <td class="td-valign">Live Online Class</td>
+                    <td class="text-right"><button href="#myModal6" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
+                  </tr>
 
-              </tbody>
-            </table>
+                </tbody>
+              </table>
+            </div><!-- /.plan -->
+            
             
 
             <div class="modal fade" id="myModal1">
