updated tutoring packages/descriptions

--- a/public/tutoring.html
+++ b/public/tutoring.html
@@ -84,29 +84,29 @@
         <div class="col-md-4">
           <div class="plan">
             <div class="plan-name h2-resize-no-pad">
-              <h3>10-hour package</h3>
+              <h3>16-hour package</h3>
             </div>
             <div class="plan-info">
             </div>
             <div class="plan-price">
-              <h2 class="tutoring-price-size">$799</h2>
+              <h2 class="tutoring-price-size">$1199</h2>
             </div>
             <ul class="plan-features">
-              <li><i class="icon-ok"></i> Learn the fundamentals</li>
-              <li><i class="icon-ok"></i> Design and build a simple web project</li>
+              <li><i class="icon-ok"></i> Finish standard curriculum</li>
+              <li><i class="icon-ok"></i> Design and build a custom web project</li>
               <li><i class="icon-ok"></i> Access to moderated forums</li>
             </ul>
           </div><!-- /.plan -->
         </div>
         <div class="col-md-4">
-          <div class="plan">
+          <div class="plan plan-featured">
             <div class="plan-name">
-              <h3>20-hour package</h3>
+              <h3>30-hour package</h3>
             </div>
             <div class="plan-info">
             </div>
             <div class="plan-price">
-              <h2 class="tutoring-price-size">$1399</h2>
+              <h2 class="tutoring-price-size">$2099</h2>
             </div>
             <ul class="plan-features">
               <li><i class="icon-ok"></i> Dive deeper into web development topics</li>
@@ -121,14 +121,14 @@
           </div><!-- /.plan -->
         </div>
         <div class="col-md-4">
-          <div class="plan plan-featured">
+          <div class="plan">
             <div class="plan-name">
               <h3>40-hour package</h3>
             </div>
             <div class="plan-info">
             </div>
             <div class="plan-price">
-              <h2 class="tutoring-price-size">$2399</h1>
+              <h2 class="tutoring-price-size">$2599</h1>
             </div>
             <ul class="plan-features">
               <li><i class="icon-ok"></i> Dig into the industry established frameworks</li>
