fixed links to eventbrite

--- a/public/classes.html
+++ b/public/classes.html
@@ -89,7 +89,7 @@
             </ul>
             <div class="plan-cta">
               <br class="spacer-md">
-              <a href="http://bit.ly/coding-workshop" class="btn btn-primary btn-large" target="_blank">Register! &raquo;</a>
+              <a href="http://www.eventbrite.com/o/mushroom-learning-6657590177" class="btn btn-primary btn-large" target="_blank">Register! &raquo;</a>
             </div>
           </div><!-- /.plan -->
         </div>
@@ -211,7 +211,7 @@
                     </table>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Enroll now!</button>
+                    <a href="http://www.eventbrite.com/e/middle-school-coding-class-community-prep-academy-tickets-12788018307" class="btn btn-primary btn-large" target="_blank">Enroll now!</a>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
@@ -276,7 +276,7 @@
                     </table>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Enroll now!</button>
+                    <a href="http://www.eventbrite.com/e/middle-school-coding-class-realm-academy-tickets-12788238967a" class="btn btn-primary btn-large" target="_blank">Enroll now!</a>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
@@ -341,7 +341,7 @@
                     </table>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Enroll now!</button>
+                    <a href="http://www.eventbrite.com/e/middle-school-coding-class-online-1-tickets-12788263039" class="btn btn-primary btn-large" target="_blank">Enroll now!</a>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
@@ -406,7 +406,7 @@
                     </table>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Enroll now!</button>
+                    <a href="http://www.eventbrite.com/e/middle-school-coding-class-online-2-tickets-12788291123" class="btn btn-primary btn-large" target="_blank">Enroll now!</a>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
@@ -477,7 +477,7 @@
                     </table>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Enroll now!</button>
+                    <a href="http://www.eventbrite.com/e/middle-school-coding-class-online-3-tickets-12788311183" class="btn btn-primary btn-large" target="_blank">Enroll now!</a>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
@@ -548,7 +548,7 @@
                     </table>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Enroll now!</button>
+                    <a href="http://www.eventbrite.com/e/middle-school-coding-class-online-4-tickets-12788363339" class="btn btn-primary btn-large" target="_blank">Enroll now!</a>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
