--- a/public/index.html
+++ b/public/index.html
@@ -162,27 +162,26 @@
 							<h4>Workshops</h4>
 							<p>This is the mini portobello! Mushroom Learning's coding workshops give students a great introduction into the world of basic programming languages and web design. Topics include the skeleton of a website using HTML/CSS, and JavaScript.</p>
 							<a href="/workshops" class="btn btn-default btn-large mushroom-menu-button">Learn more &raquo;</a>
-							<a href="http://bit.ly/coding-workshop" class="btn btn-default btn-large mushroom-menu-button" target="_blank">Sign up &raquo;</a>
 						</div>
 						<br class="spacer-lg">
 					</div>
 					<div class="col-sm-3">
-						<div class="tile">
-							<div class="hexagon"><i class="icon-sun icon-4x"></i></div>
-							<h4>Summer Camp</h4>
-							<p>This is the morel of our mushroom medley. Mushroom Learnings summer camp is a fun way to learn web design in an immersive educational environment and enjoy the summer with friends. In addition to coding, our camp includes fun unplugged games and artificial intelligence activities. </p>
-							<a href="summer-camp" class="btn btn-default btn-large mushroom-menu-button">Learn more &raquo;</a>
-							<a href="http://bit.ly/coding-la" class="btn btn-default btn-large mushroom-menu-button" target="_blank">Sign up &raquo;</a>
+						<div id="summer-camp-hover">
+							<div class="tile">
+								<div class="hexagon"><i class="icon-sun icon-4x"></i></div>
+								<h4>Summer Camp</h4>
+								<p>This is the morel of our mushroom medley. Mushroom Learnings summer camp is a fun way to learn web design in an immersive educational environment and enjoy the summer with friends. In addition to coding, our camp includes fun unplugged games and artificial intelligence activities. </p>
+								<a href="summer-camp" class="btn btn-default btn-large mushroom-menu-button">Learn more &raquo;</a>
+							</div>
+							<br class="spacer-lg">
 						</div>
-						<br class="spacer-lg">
 					</div>
 					<div class="col-sm-3">
 						<div class="tile" id="temp-highlight">
 							<div class="hexagon"><i class="icon-group icon-4x"></i></div>
 							<h4>The Mushroom Program</h4>
 							<p>This is program is the full Shiitake. Our 8-week program covers coding languages HTML/CSS, and JavaScript in our learning environment. In addition to our web design course, we will be offering a Minecraft modding course that combines JavaScript with the fun of gaming.</p>
-							<a class="btn btn-default btn-large typeform-share link" href="https://mushroomlearning.typeform.com/to/byyCEH" data-mode="2" target="_blank">Learn more!</a>
-							<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+							<a href="/classes" class="btn btn-default btn-large mushroom-menu-button">Learn more &raquo;</a>
 
 						</div>
 						<br class="spacer-lg">
@@ -193,7 +192,6 @@
 							<h4>Tutoring</h4>
 							<p>Our mentors will help your student design and execute on a web project. From scoping out the initial idea, to writing specifications, and finally producing the final product, the mentors will give individualized attention to any of the ideas that mushroom out of your imagination.</p>
 							<a href="/tutoring" class="btn btn-default btn-large mushroom-menu-button">Learn more &raquo;</a>
-							<a href="/tutoring#pricing" class="btn btn-default btn-large mushroom-menu-button">Sign up &raquo;</a>
 						</div>
 						<br class="spacer-lg">
 					</div>
