--- a/public/workshops.html
+++ b/public/workshops.html
@@ -78,9 +78,6 @@
             <div class="plan-name">
               <h3>Pricing</h3>
             </div>
-            <div class="plan-info">
-              <p>Using Mozilla's X-Ray Goggles, students will learn how the skeleton of a website is structured. By the end of the workshop, students will understand basic HTML tags and also remix a website.</p>
-            </div>
             <div class="plan-price">
               <h2 class="tutoring-price-size">Free!</h2>
             </div>
@@ -91,48 +88,68 @@
             </ul>
             <div class="plan-cta">
               <br class="spacer-md">
-              <a href="http://bit.ly/coding-workshop" class="btn btn-primary btn-large" target="_blank">Register! &raquo;</a>
+              <a href="http://www.eventbrite.com/o/mushroom-learning-6657590177" class="btn btn-primary btn-large" target="_blank">Register! &raquo;</a>
             </div>
           </div><!-- /.plan -->
         </div>
         <div class="col-md-8">
-          <div class="col-md-6">
-            <div class="plan">
-              <div class="plan-name">
-                <h3>Location</h3>
-              </div>
-              <div class="plan-info">
-              </div>
-              <div class="plan-price">
-              </div>
-              <ul class="plan-features box-text-address">
-                <li> 
-                  <p>The City School</p>
-                  <p>11625 West Pico Blvd</p>
-                  <p>Los Angeles, CA 90064</p>
-                </li>
-              </ul>
-            </div><!-- /.plan -->
-          </div>
-          <div class="col-md-6">
-            <div class="plan">
-              <div class="plan-name">
-                <h3>Dates</h3>
-              </div>
-              <div class="plan-info">
-              </div>
-              <div class="plan-price">
-              </div>
-              <ul class="plan-features box-text">
-                <li>July 13th: 2:00pm - 3:00pm</li>
-                <li>July 19th: 10:00am - 11:00am</li>
-              </ul>
-            </div><!-- /.plan -->
-          </div>
           <div class="col-md-12">
-            <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/BduU75" data-text="workshop-request" style="width:100%;height:318px;overflow:hidden;"></div>
-            <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+            <div class="plan">
+              <div class="plan-name">
+                <h3>Workshops</h3>
+              </div>
+              <table class="table table-striped text-left" id="tblGrid">
+                <thead id="tblHead">
+                  <tr>
+                    <th>Start Date</th>
+                    <th>Meets on (PDT)</th>
+                    <th>Location</th>
+                    <th class="text-right"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="td-valign">9/13/2014</td>
+                    <td class="td-valign">Saturday 10:00 - 11:00PM</td>
+                    <td class="td-valign"><a href="https://goo.gl/maps/q9Ap5" target="_blank">Community Preparatory Academy</a></td>
+                    <td class="text-right"><a href="https://www.eventbrite.com/e/youth-coding-workshop-free-community-prep-academy-tickets-12788854809" class="btn btn-default" target="_blank">Enroll</a></td>
+                  </tr>
+                  <tr>
+                    <td class="td-valign">9/27/2014</td>
+                    <td class="td-valign">Saturday 10:00 - 11:00AM</td>
+                    <td class="td-valign"><a href="https://goo.gl/maps/zG2ZW" target="_blank">Realm Academy</a></td>
+                    <td class="text-right"><a href="https://www.eventbrite.com/e/youth-coding-workshop-free-realm-academy-tickets-12788798641" class="btn btn-default" target="_blank">Enroll</a></td>
+                  </tr>
+                  <tr>
+                    <td class="td-valign">10/5/2014</td>
+                    <td class="td-valign">Sunday 2:30 - 3:00PM</td>
+                    <td class="td-valign">Live Online Workshop</td>
+                    <td class="text-right"><a href="http://www.eventbrite.com/e/youth-coding-workshop-free-online-tickets-12788618101" class="btn btn-default" target="_blank">Enroll</a></td>
+                  </tr>
+                  <tr>
+                    <td class="td-valign">10/8/2014</td>
+                    <td class="td-valign">Wednesday 6:30 - 7:00PM</td>
+                    <td class="td-valign">Live Online Workshop</td>
+                    <td class="text-right"><a href="http://www.eventbrite.com/e/youth-coding-workshop-free-online-tickets-12788618101" class="btn btn-default" target="_blank">Enroll</a></td>
+                  </tr>
+                  <tr>
+                    <td class="td-valign">10/25/2014</td>
+                    <td class="td-valign">Saturday 1:00 - 1:30PM</td>
+                    <td class="td-valign">Live Online Workshop</td>
+                    <td class="text-right"><a href="http://www.eventbrite.com/e/youth-coding-workshop-free-online-tickets-12788618101" class="btn btn-default" target="_blank">Enroll</a></td>
+                  </tr>
+                  <tr>
+                    <td class="td-valign">10/28/2014</td>
+                    <td class="td-valign">Tuesday 6:00 - 6:30PM</td>
+                    <td class="td-valign">Live Online Workshop</td>
+                    <td class="text-right"><a href="http://www.eventbrite.com/e/youth-coding-workshop-free-online-tickets-12788618101" class="btn btn-default" target="_blank">Enroll</a></td>
+                  </tr>
+
+                </tbody>
+              </table>
+            </div><!-- /.plan -->
           </div>
+          
         </div>
       </div>
     </div>
