changed navbar order

--- a/public/faq.html
+++ b/public/faq.html
@@ -37,9 +37,9 @@
         <ul class="nav navbar-nav">
           <li><a href="/" id="home-url">Home</a></li>
           <li><a href="/workshops" id="workshops-url">Workshops</a></li>
-          <li><a href="/summer-camp" id="summer-camp-url">Summer Camp</a></li>
           <li><a href="/classes" id="classes-url">Classes</a></li>
           <li><a href="/tutoring" id="tutoring-url">Tutoring</a></li>
+          <li><a href="/summer-camp" id="summer-camp-url">Summer Camp</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">FAQ <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -142,7 +142,7 @@
                       </div>
                     </div>
                     <div class="panel">
-                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse7">Why take a mushroom learning course?
+                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse7">Why take a Mushroom Learning course?
                         <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
                       </a>
                       <div id="collapse7" class="panel-collapse collapse in">
