added terms and conditions

--- a/public/index.html
+++ b/public/index.html
@@ -295,6 +295,7 @@
 						<ul class="list-unstyled">
 							<li><i class="icon-angle-right"></i> 9am-6pm PST Mon-Fri</li>
 							<li><i class="icon-angle-right"></i> US (424) 244-9794</li>
+							<li><i class="icon-angle-right"></i> <a href="/terms">Terms and Conditions</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-3 col-md-3">
