--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -210,6 +210,7 @@
             <ul class="list-unstyled">
               <li><i class="icon-angle-right"></i> 9am-6pm PST Mon-Fri</li>
               <li><i class="icon-angle-right"></i> US (424) 244-9794</li>
+              <li><i class="icon-angle-right"></i> <a href="/terms">Terms and Conditions</a></li>
             </ul>
           </div>
           <div class="col-sm-3 col-md-3">
@@ -305,10 +306,6 @@
     $('#home-url').click(function(){
        window.location.href='/';
     })
-    $('#faq-url').click(function(){
-       window.location.href='/faq';
-    })
-
     $('#faq-url').click(function(){
        window.location.href='/faq';
     })
